...
    
    var onImageLoad: (() -> Void)?
    weak var delegate: ImagesListCellDelegate?
    
    override func awakeFromNib() {
        super.awakeFromNib()
        cellLikeButton.accessibilityIdentifier = "likeButton" 
        let tapRecognizer = UITapGestureRecognizer(target: self, action: #selector(imageTapped))
        cellImageView.isUserInteractionEnabled = true
        cellImageView.addGestureRecognizer(tapRecognizer)
    }
    
    @objc private func imageTapped() {
...
